# RECA

./: .gitignore  CMakeLists.txt  Makefile  README.md  algorithm.cpp  algorithm.hpp  couplings.cpp  couplings.hpp  docker-compose.yml  experiment  experiment.cpp  fields.hpp  graph.hpp  graphics.cpp  main.cpp  nographics.cpp  plot.nb  run_job.py  runmany.sh  sample.json  sample.yaml  state.cpp  state.hpp  utils.cpp  utils.hpp
docker/mongocxx/: Dockerfile
docker/reca/: Dockerfile  app.py  requirements.txt
docker/reca/templates/: hello.html
proc/: autocorrelation.py  energy.py  plotfrommongo.py
src/: CMakeLists.txt  algorithm.hpp  bonds.hpp  continuous.hpp  couplings.cpp  couplings.hpp  dbwriter.hpp  discrete.hpp  experiment.cpp  graphics.cpp  ising.hpp  jja.hpp  minimal.cpp  node.hpp  reca.cpp  reca.cpp~  state.hpp  state.hpp~  utils.cpp  utils.hpp
